background img + some styling

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Zetta&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
+<div id="page">
 
 </div>
 <script src="build/out.js"></script>
